fix chrome stuck scrolling bug

--- a/src/App.less
+++ b/src/App.less
@@ -13,6 +13,7 @@
 
   #frame {
     height: 100vh;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
