--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -331,6 +331,7 @@ template {
 }
 .App #frame {
   height: 100vh;
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
